@@ -122,6 +122,7 @@ DayOfTheWeek, Month DD, YYYY / The Tcpdump Group
       Autoconf: Add autogen.sh, remove configure and config.h.in and put
         these generated files in the release tarball.
       Autoconf: Get the size of a time_t.
+      Fix propagation of cc_werr_cflags() output.
     Documentation:
       Update and fix pcap-filter man page.
       Add a README.haiku.md file.
